[gd_scene load_steps=22 format=3 uid="uid://l27ea6n2ywdf"]

[ext_resource type="Script" uid="uid://cmtiwcn01y24c" path="res://Scripts/UI/options_ingame.gd" id="1_nmxo4"]
[ext_resource type="Texture2D" uid="uid://b85vwgmgm8bwx" path="res://Assets/Telas/Tela_sem_nada.jpg" id="2_u15er"]
[ext_resource type="Texture2D" uid="uid://bgmg64qvyuyj5" path="res://Assets/Logo.png" id="3_yhwhy"]
[ext_resource type="FontFile" uid="uid://bry6apua5ag3h" path="res://Assets/Fonte/TooMuchInk.ttf" id="4_i37ck"]
[ext_resource type="Texture2D" uid="uid://ii2ohnsq6ic5" path="res://Assets/BtFundos/Fundo opt.png" id="5_1ycee"]
[ext_resource type="Texture2D" uid="uid://yc6mkvpe7nbk" path="res://Assets/icons/Player 2.png" id="6_coi5j"]
[ext_resource type="Texture2D" uid="uid://d0nx88t586c7y" path="res://Assets/icons/Player 1.png" id="7_5nsgk"]
[ext_resource type="Texture2D" uid="uid://i6q5qihmx7t3" path="res://Assets/icons/Player 3.png" id="8_sdoda"]
[ext_resource type="Texture2D" uid="uid://b8wrrgxsnn2gs" path="res://Assets/icons/Player 4.png" id="9_1acag"]
[ext_resource type="Texture2D" uid="uid://cadsy78pu1gfc" path="res://Assets/icons/music1.png" id="10_48j1v"]
[ext_resource type="Texture2D" uid="uid://d4r800hb4lri" path="res://Assets/icons/music2.png" id="11_ewg25"]
[ext_resource type="Texture2D" uid="uid://c0xmbcg6eyidl" path="res://Assets/icons/Conta2.png" id="12_e0w8b"]
[ext_resource type="Texture2D" uid="uid://bqkbr5gybvgyt" path="res://Assets/icons/Conta1.png" id="13_4qytw"]
[ext_resource type="PackedScene" uid="uid://dyqpu8xl1dupk" path="res://Cenas/UI/input_button.tscn" id="14_uiwcn"]
[ext_resource type="Texture2D" uid="uid://cbgts0dcl7p56" path="res://Assets/BtFundos/Butõespequeno.png" id="15_edxea"]
[ext_resource type="PackedScene" uid="uid://d1p3fbd6wpcvb" path="res://Cenas/UI/sound_bar.tscn" id="15_yhwhy"]
[ext_resource type="PackedScene" uid="uid://chn7pjpxhevcj" path="res://sfx_sound_bar.tscn" id="16_i37ck"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nxuc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_coi5j")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_5nsgk")
}],
"loop": true,
"name": &"player1",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xtoph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_sdoda")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_1acag")
}],
"loop": true,
"name": &"player2",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_txlel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_48j1v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ewg25")
}],
"loop": true,
"name": &"msc",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_y8hnm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_e0w8b")
}],
"loop": true,
"name": &"conta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_4qytw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Options_ingame" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nmxo4")

[node name="TelaSemNada" type="Sprite2D" parent="."]
position = Vector2(576.75, 350)
scale = Vector2(1.61921, 1.42276)
texture = ExtResource("2_u15er")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 692.0
color = Color(0, 0, 0, 0.631373)
metadata/_edit_lock_ = true

[node name="Khaoslogo" type="Sprite2D" parent="."]
position = Vector2(572, 64.5)
scale = Vector2(0.406, 0.298)
texture = ExtResource("3_yhwhy")

[node name="Voltar" type="Button" parent="."]
offset_left = 3.0
offset_top = 611.0
offset_right = 82.0
offset_bottom = 650.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 30
text = "Back"
flat = true
metadata/_edit_lock_ = true

[node name="FundoOpt" type="Sprite2D" parent="."]
position = Vector2(578, 324)
texture = ExtResource("5_1ycee")
metadata/_edit_lock_ = true

[node name="Butões" type="Node2D" parent="."]

[node name="Player" type="AnimatedSprite2D" parent="Butões"]
position = Vector2(210, 137)
scale = Vector2(0.391304, 0.3125)
sprite_frames = SubResource("SpriteFrames_nxuc1")
animation = &"idle"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="Player1" type="Button" parent="Butões"]
offset_left = 168.0
offset_top = 110.0
offset_right = 256.0
offset_bottom = 203.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 20
text = "


Player 1"
flat = true

[node name="Player2" type="AnimatedSprite2D" parent="Butões"]
position = Vector2(367.973, 135.859)
scale = Vector2(0.322216, 0.242759)
sprite_frames = SubResource("SpriteFrames_xtoph")
animation = &"player2"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="Player3" type="Button" parent="Butões"]
offset_left = 325.0
offset_top = 108.0
offset_right = 413.0
offset_bottom = 205.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 20
text = "


Player 2"
flat = true

[node name="Sounds2" type="AnimatedSprite2D" parent="Butões"]
position = Vector2(789.025, 136)
scale = Vector2(0.164105, 0.160858)
sprite_frames = SubResource("SpriteFrames_txlel")
animation = &"idle"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="Sounds" type="Button" parent="Butões"]
offset_left = 747.0
offset_top = 108.0
offset_right = 835.0
offset_bottom = 205.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 20
text = "


Sounds"
flat = true

[node name="account" type="AnimatedSprite2D" parent="Butões"]
position = Vector2(945.025, 136)
scale = Vector2(0.164105, 0.160858)
sprite_frames = SubResource("SpriteFrames_y8hnm")
animation = &"conta"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="account2" type="Button" parent="Butões"]
offset_left = 902.0
offset_top = 107.0
offset_right = 990.0
offset_bottom = 205.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 20
text = "


Account"
flat = true

[node name="Options" type="Button" parent="."]
offset_left = 476.0
offset_top = 114.0
offset_right = 675.0
offset_bottom = 173.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 50
text = "Options"
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 126.0
offset_top = 207.0
offset_right = 1031.0
offset_bottom = 518.0
scale = Vector2(1, 1.00559)

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="P1" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 40
text = "|----------------------- Player 1 -----------------------|"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Container" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container"]
layout_mode = 2

[node name="Mov" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Moviment"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Jump" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Left" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Down" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Right" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Combat" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Combat"

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Attack" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Block" parent="ScrollContainer/MarginContainer/VBoxContainer/P1Container/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="P2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 40
text = "|----------------------- Player 2 -----------------------|"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Container" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container"]
layout_mode = 2

[node name="Mov" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Moviment"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Jump" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Left" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Down" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Right" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Combat" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Combat"

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Attack" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Block" parent="ScrollContainer/MarginContainer/VBoxContainer/P2Container/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("14_uiwcn")]
layout_mode = 2

[node name="Sounds" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 40
text = "|------------------------ Sounds -----------------------|"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SDsContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Music" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Music"

[node name="SoundBar" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("15_yhwhy")]
layout_mode = 2

[node name="VBoxContainer2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Sfx" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Sonds Efects"

[node name="SFXSoundBar" parent="ScrollContainer/MarginContainer/VBoxContainer/SDsContainer/VBoxContainer2/VBoxContainer2" instance=ExtResource("16_i37ck")]
layout_mode = 2

[node name="Auth" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 40
text = "|----------------------- Account -----------------------|"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AuthContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer"]
layout_mode = 2

[node name="UserName" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Username" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer/UserName"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Username:"

[node name="Name" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer/UserName"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
max_length = 12
expand_to_text_length = true

[node name="Spacer" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer/UserName"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ID" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="Email" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer/ID"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
text = "Email:"

[node name="MyEmail" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer/ID"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 25
max_length = 55
expand_to_text_length = true

[node name="Spacer" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer/AuthContainer/VBoxContainer/ID"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Restbt" type="Sprite2D" parent="."]
position = Vector2(673, 584)
texture = ExtResource("15_edxea")

[node name="Reset" type="Button" parent="."]
offset_left = 640.0
offset_top = 564.0
offset_right = 706.0
offset_bottom = 605.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 20
text = "Reset"
flat = true

[node name="Applybt" type="Sprite2D" parent="."]
position = Vector2(482, 585)
texture = ExtResource("15_edxea")

[node name="Apply" type="Button" parent="."]
offset_left = 449.0
offset_top = 564.0
offset_right = 517.0
offset_bottom = 607.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_i37ck")
theme_override_font_sizes/font_size = 20
text = "Apply"
flat = true

[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="mouse_entered" from="Butões/Player1" to="." method="_on_player_1_mouse_entered"]
[connection signal="mouse_exited" from="Butões/Player1" to="." method="_on_player_1_mouse_exited"]
[connection signal="pressed" from="Butões/Player1" to="." method="_on_player_1_pressed"]
[connection signal="mouse_entered" from="Butões/Player3" to="." method="_on_player_3_mouse_entered"]
[connection signal="mouse_exited" from="Butões/Player3" to="." method="_on_player_3_mouse_exited"]
[connection signal="pressed" from="Butões/Player3" to="." method="_on_player_3_pressed"]
[connection signal="mouse_entered" from="Butões/Sounds" to="." method="_on_sounds_mouse_entered"]
[connection signal="mouse_exited" from="Butões/Sounds" to="." method="_on_sounds_mouse_exited"]
[connection signal="pressed" from="Butões/Sounds" to="." method="_on_sounds_pressed"]
[connection signal="mouse_entered" from="Butões/account2" to="." method="_on_account_2_mouse_entered"]
[connection signal="mouse_exited" from="Butões/account2" to="." method="_on_account_2_mouse_exited"]
[connection signal="pressed" from="Butões/account2" to="." method="_on_account_2_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Apply" to="." method="_on_apply_pressed"]
